objects/advpm__Advologix_Timeline_User_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>System settings used by Advologix internally.</description>
    <fields>
        <fullName>advpm__Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Timeline_Object_Id__c</fullName>
        <label>Timeline Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__User_Id__c</fullName>
        <label>User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Advologix Timeline User Settings</label>
</CustomObject>